# routes/index.js
@@ -2,6 +2,7 @@ const router = require("express").Router();
 
 router.use("/", require("./swagger"));
 
-router.use("/contacts", require("./contacts"));
+router.use("/books", require("./books"));
+router.use("/reviewers", require("./reviewers"));
 
 module.exports = router;
